import templateWithLoader from '../src/_utils/templateWithLoader'
import prettier from 'prettier'

const clean = (t) =>
  prettier.format(t.replace(process.cwd(), ''), { parser: 'typescript' })

const tests = [
  {
    describe: 'exporting as a function - with loader',
    code: `
      export default function Page() {
        return <div>Hello world</div>
      }

      export function getStaticPaths() {
        return {}
      }

      export function getStaticProps(){
        return { props: {} }
      }
  `,
    cases: [
      {
        page: '/index',
        loader: 'getStaticProps',
        hasLoader: true,
      },
    ],
  },
  {
    describe: 'exporting as a function - without loader',
    code: `
      export default function Page() {
        return <div>Hello world</div>
      }
  `,
    cases: [
      {
        page: '/index',
        loader: 'getStaticProps',
        hasLoader: false,
      },
      {
        page: '/blog/[post]/[...catchall]',
        loader: 'getServerSideProps',
        hasLoader: false,
      },
    ],
  },
  {
    describe: 'exporting as a arrow function - without loader',
    code: `export default () => <div>Hello world</div>`,
    cases: [
      {
        page: '/index',
        loader: 'getStaticProps',
        hasLoader: false,
      },
      {
        page: '/blog/[post]/[...catchall]',
        loader: 'getServerSideProps',
        hasLoader: false,
      },
    ],
  },
  {
    describe: 'exporting as a function in diferent line - with loader',
    code: `
      function Page() {
        return <div>Hello world</div>
      }

      function getServerSideProps() {
        return { props: {} }
      }

      export { getServerSideProps }
      export default Page
  `,
    cases: [
      {
        page: '/index',
        loader: 'getServerSideProps',
        hasLoader: true,
      },
    ],
  },
  {
    describe: 'exporting as a function in diferent line - without loader',
    code: `
      function Page() {
        return <div>Hello world</div>
      }

      export default Page
  `,
    cases: [
      {
        page: '/index',
        loader: 'getStaticProps',
        hasLoader: false,
      },
      {
        page: '/blog/[post]/[...catchall]',
        loader: 'getServerSideProps',
        hasLoader: false,
      },
    ],
  },
  {
    describe: 'exporting as a class - with loader',
    code: `
      import React from 'react'

      export default class Page extends React.Component {
        render() {
          return <div>Hello world</div>
        }
      }

      export function getStaticProps(){
        return { props: {} }
      }
  `,
    cases: [
      {
        page: '/index',
        loader: 'getStaticProps',
        hasLoader: true,
      },
    ],
  },
  {
    describe: 'exporting as a class in a diferent line - without loader',
    code: `
      import React from 'react'

      class Page extends React.Component {
        render() {
          return <div>Hello world</div>
        }
      }

      const myPage = Page

      export default myPage
  `,
    cases: [
      {
        page: '/index',
        loader: 'getStaticProps',
        hasLoader: false,
      },
      {
        page: '/blog/[post]/[...catchall]',
        loader: 'getServerSideProps',
        hasLoader: false,
      },
    ],
  },
  {
    describe: 'loader as a arrow function',
    code: `
      export default function Page() {
        return <div>Hello world</div>
      }

      const getStaticProps = () => { props: {} }
      export { getStaticProps }
  `,
    cases: [
      {
        page: '/index',
        loader: 'getStaticProps',
        hasLoader: true,
      },
    ],
  },
  {
    describe: 'loader imported to another place',
    code: `
      import getStaticProps from 'somewhere/getStaticProps'
      import getStaticPaths from 'somewhere/getStaticPaths'

      const config = {}

      export default function Page() {
        return <div>Hello world</div>
      }

      export { config, getStaticProps, getStaticPaths }
  `,
    cases: [
      {
        page: '/index',
        loader: 'getStaticProps',
        hasLoader: true,
      },
    ],
  },
  {
    describe: 'loader with named import to another place',
    code: `
      import { getStaticProps } from 'somewhere/getStaticProps'
      import { getStaticPaths } from 'somewhere/getStaticPaths'

      const config = {}

      export default function Page() {
        return <div>Hello world</div>
      }

      export { config, getStaticProps, getStaticPaths }
  `,
    cases: [
      {
        page: '/index',
        loader: 'getStaticProps',
        hasLoader: true,
      },
    ],
  },
  {
    describe: 'loader with one named import to another place',
    code: `
      import { getStaticPaths, getStaticProps, config } from 'somewhere/getStaticProps'

      export default function Page() {
        const test = 'getStaticProps'
        console.log('This should log getStaticProps without any modification')
        return <div>Hello getStaticProps</div>
      }

      export { config, getStaticProps, getStaticPaths }
  `,
    cases: [
      {
        page: '/index',
        loader: 'getStaticProps',
        hasLoader: true,
      },
    ],
  },
  {
    describe: 'loader with named import to another place + rename',
    code: `
      import { getStaticPropsA as getStaticProps } from 'somewhere/getStaticProps'
      import { getStaticProps as getStaticPaths } from 'somewhere/getStaticPaths'

      const config = {}

      export default function Page() {
        return <div>Hello world</div>
      }

      export { config, getStaticProps, getStaticPaths }
  `,
    cases: [
      {
        page: '/index',
        loader: 'getStaticProps',
        hasLoader: true,
      },
    ],
  },
]

describe('templateWithLoader', () => {
  tests.forEach((d) => {
    describe(d.describe, () => {
      d.cases.forEach(({ expected, debug, ...options }) => {
        const fn = debug ? test.only : test
        const testname = Object.entries(options).map(([k, v]) => `${k}: ${v}`)
        fn(testname.join(' | '), () => {
          expect(clean(templateWithLoader(d.code, options))).toMatchSnapshot()
        })
      })
    })
  })
})
